# trl

./: .gitignore  pyproject.toml  requirements.txt
aiopslab/: README.md  client.py  generator.py  grpo.py  reward.py  rewards.py  test.py  test_2.py  train.py  train_grpo.py
aiopslab/accelerate_configs/: deepspeed_zero1.yaml  deepspeed_zero2.yaml
aiopslab/deprecated/: test.py  train_grpo.py
trl/extras/: conversation_generator.py
trl/scripts/: vllm_serve.py
trl/trainer/: grpo_config.py  grpo_trainer.py
