[project]
name        = "trl"
version     = "0.1.0"
description = "TRL: Reinforcement learning for language models"
readme = "README.md"

dependencies = [
  "accelerate>=1.6.0",
  "datasets>=3.5.0",
  "rich>=14.0.0",
  "transformers>=4.46.0",
  "deepspeed>=0.16.7",
  "fastapi>=0.115.12",
  "wandb>=0.19.9",

  # vLLM stack
  "vllm==0.8.4",

  # Core runtime extras pulled in explicitly
  "typing_extensions>=4.9",
  "pydantic>=2.7,<3",
  "starlette>=0.40,<0.47",
]

[tool.ruff]
target-version = "py39"
line-length = 119

[tool.ruff.lint]
ignore = [
    "B028", # warning without explicit stacklevel
    "C408", # dict() calls (stylistic)
    "C901", # function complexity
    "E501",
]
extend-select = ["E", "F", "I", "W", "UP", "B", "T", "C"]

[tool.ruff.lint.per-file-ignores]
# Allow prints in auxiliary scripts
"examples/**.py" = ["T201"]
"scripts/**.py" = ["T201"]
# Ignore import violations in all `__init__.py` files.
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["trl"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "low-priority: marks tests as low priority (deselect with '-m \"not low-priority\"')"
]
